<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zodiac_scroll_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:background="@drawable/blue_background"
    tools:context=".fragments.ZodiacFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/zodiacTraits_symbol"
            android:layout_width="193dp"
            android:layout_height="183dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/zodiac_symbol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/zodiacTraits_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textSize="46sp"
            android:fontFamily="@font/elsie_swash_caps"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_date"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Pisces" />

        <TextView
            android:id="@+id/zodiacTraits_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/elsie_swash_caps"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_rulingPlanet"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_rulingPlanet"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_name"
            tools:text="02/19 - 03/20" />

        <TextView
            android:id="@+id/zodiacTraits_rulingPlanet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/elsie_swash_caps"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_element"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_element"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_date"
            tools:text="Ruling Planet: NEPTUNE" />

        <TextView
            android:id="@+id/zodiacTraits_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:fontFamily="@font/elsie_swash_caps"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_modality"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_modality"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_rulingPlanet"
            tools:text="Element: Water" />

        <TextView
            android:id="@+id/zodiacTraits_modality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/elsie_swash_caps"
            app:layout_constraintEnd_toStartOf="@+id/zodiacTraits_symbol"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_element"
            tools:text="Modality: Mutable" />

        <TextView
            android:id="@+id/zodiacTraits_overView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/overview"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/zodiacTraits_overView_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_modality" />

        <TextView
            android:id="@+id/zodiacTraits_overView_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zodiacTraits_overView_title"
            tools:text="Lorem ipsum dolor amet disrupt pork belly marfa beard hell of seitan, trust fund portland ennui squid proident irure enamel pin. Actually occupy tousled squid, kickstarter la croix dolore retro. La croix banh mi gluten-free air plant, dolore irony biodiesel knausgaard in fam tacos craft beer literally pinterest. Roof party salvia hashtag proident, thundercats actually XOXO farm-to-table whatever celiac meggings. In kogi commodo vexillologist." />

        <TextView
            android:id="@+id/zodiacTraits_love_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/love"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/zodiacTraits_love_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_overView_text"
            app:layout_constraintVertical_bias="0.75" />

        <TextView
            android:id="@+id/zodiacTraits_love_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_love_title"
            tools:text="Lorem ipsum dolor amet disrupt pork belly marfa beard hell of seitan, trust fund portland ennui squid proident irure enamel pin. Actually occupy tousled squid, kickstarter la croix dolore retro. La croix banh mi gluten-free air plant, dolore irony biodiesel knausgaard in fam tacos craft beer literally pinterest. Roof party salvia hashtag proident, thundercats actually XOXO farm-to-table whatever celiac meggings. In kogi commodo vexillologist." />

        <TextView
            android:id="@+id/zodiacTraits_wealth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/wealth"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/zodiacTraits_wealth_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_love_text"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/zodiacTraits_wealth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_wealth_title"
            tools:text="Lorem ipsum dolor amet disrupt pork belly marfa beard hell of seitan, trust fund portland ennui squid proident irure enamel pin. Actually occupy tousled squid, kickstarter la croix dolore retro. La croix banh mi gluten-free air plant, dolore irony biodiesel knausgaard in fam tacos craft beer literally pinterest. Roof party salvia hashtag proident, thundercats actually XOXO farm-to-table whatever celiac meggings. In kogi commodo vexillologist." />

        <TextView
            android:id="@+id/zodiacTraits_famousFigures_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/famous_figures"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/zodiacTraits_famousFigures_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/zodiacTraits_keywords_title"
            app:layout_constraintTop_toBottomOf="@+id/zodiacTraits_wealth_text"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/zodiacTraits_famousFigures_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingBottom="20dp"
            android:lineSpacingExtra="8sp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_famousFigures_title"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_famousFigures_title"
            tools:text="Rihanna\nKash Doll\nAlbert Einstein\nCommon\nJesus Christ" />

        <TextView
            android:id="@+id/zodiacTraits_keywords_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/keywords"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/zodiacTraits_famousFigures_title"
            app:layout_constraintEnd_toStartOf="@+id/zodiacTraits_famousFigures_title"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/zodiacTraits_keywords_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:layout_marginBottom="8dp"
            android:lineSpacingExtra="8sp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/zodiacTraits_keywords_title"
            app:layout_constraintStart_toStartOf="@+id/zodiacTraits_keywords_title"
            tools:text="Rihanna\nKash Doll\nAlbert Einstein\nCommon\nJesus Christ" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>